--- a/layout-puro/index.html
+++ b/layout-puro/index.html
@@ -59,6 +59,56 @@
   <a href="#">Saiba mais</a>
 </section>
 
+<section>
+  <div>
+    <img src="/img/botafogo.jpg" alt="Brafé unidade Botafogo">
+    <div>
+      <h2>Botafogo</h2>
+      <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
+      <a href="#">Ver Mapa</a>
+    </div>
+  </div>
+
+  <div>
+    <img src="/img/iguatemi.jpg" alt="Brafé unidade Ihuatemi">
+    <div>
+      <h2>Iguatemi</h2>
+      <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
+      <a href="#">Ver Mapa</a>
+    </div>
+  </div>
+
+  <div>
+    <img src="/img/mineirao.jpg" alt="Brafé unidade Ihuatemi">
+    <div>
+      <h2>Mineirão</h2>
+      <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
+      <a href="#">Ver Mapa</a>
+    </div>
+  </div>
+</section>
+
+<section>
+  <div>
+    <div>
+      <h2>Assine nossa NewLetter</h2>
+      <p>promoções e eventos mensais</p>
+    </div>
+    <form>
+      <label>E-mail</label>
+      <input type="text" placeholder="Digite seu e-ail">
+      <button>Enviar</button>
+    </form>
+  </div>
+</section>
+
+<footer>
+  <div>
+    <p>Este é um projeto da Origamid. Mais em origamid.com<br>Pria de Botafogo, 300, 5º andar- Botafogo - Rio de Janeiro</p>
+    <img src="/img//brafe.png" alt="Brafé">
+  </div>
+</footer>
+
 <body>
 
 </body>
