--- a/layout-puro/index.html
+++ b/layout-puro/index.html
@@ -42,22 +42,22 @@
   <p>O café é uma bebida produzida a partir dos grãos torrados do fruto do cafeeiro. É servido tradicionalmente quente, mas também pode ser consumido gelado. Ele é um estimulante, por possuir cafeína - geralmente 80 a 140 mg para cada 207 ml dependendo do métoddo de preparação.</p>
 </section>
 
-<section>
-  <div>
-    <div>
-      <h2>Paulista</h2>
+<section class="produtos">
+  <div class="produtos-container">
+    <div class="produtos-item">
+      <h2 class="produtos-paulista">Paulista</h2>
       <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo noutras regiões: o João Alberto Castelo Branco trouxe mudas do Pará.</p>
     </div>
-    <div>
-      <h2>Carioca</h2>
+    <div class="produtos-item">
+      <h2 class="produtos-carioca">Carioca</h2>
       <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo noutras regiões: o João Alberto Castelo Branco trouxe mudas do Pará.</p>
     </div>
-    <div>
-      <h2>Carioca</h2>
+    <div class="produtos-item">
+      <h2 class="produtos-mineiro">Mineiro</h2>
       <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo noutras regiões: o João Alberto Castelo Branco trouxe mudas do Pará.</p>
     </div>
   </div>
-  <a href="#">Saiba mais</a>
+  <a href="#" class="produtos-btn">Saiba mais</a>
 </section>
 
 <section>
